--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -9,7 +9,7 @@
 			<li class="active">拼红包</li>
 		</ul>
 	</div>
-	
+
 	<div class="xui-filterPanel mb15">
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
@@ -78,7 +78,7 @@
 			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
 		</div>
 	</div>
-	
+
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
             <a href="/apps/red_packet/red_packet_setting/" class="btn btn-success fr ml25">
@@ -95,18 +95,18 @@
             {% endif %}
 
 		</div>
-		
-		<div 
+
+		<div
 			class="panel-body panel-table p0"
-			data-ui-role="advanced-table" 
+			data-ui-role="advanced-table"
 			data-app="apps/red_packet"
 			data-resource="red_packets"
-			data-template-id="#table" 
-			data-enable-paginator="true" 
-			data-enable-sort="false" 
-			data-selectable="false" 
-			data-disable-header-select="true" 
-			data-item-count-per-page="10" 
+			data-template-id="#table"
+			data-enable-paginator="true"
+			data-enable-sort="false"
+			data-selectable="false"
+			data-disable-header-select="true"
+			data-item-count-per-page="10"
 		>
 		</div>
 	</div>
@@ -135,14 +135,14 @@
 		<tbody>
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
-				<td 
+				<td
 					class="tl pl25"
-					style="width:250px; height:60px;" 
+					style="width:250px; height:60px;"
 					title="${item.name}"
 				>
-				   <a 
-					class="xui-ellipsisFox" 
-					limit="15" 
+				   <a
+					class="xui-ellipsisFox"
+					limit="15"
 					href="/apps/red_packet/red_packet/?id=${item.id}&related_page_id=${item.related_page_id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
@@ -171,7 +171,7 @@
 					${item.already_paid_money}
 				</td>
 				<td>
-				    <a href="/apps/red_packet/red_packet_participances/?id=${item.id}" class="ml5" target="_blank">查看</a>
+				    <a href="/apps/red_packet/red_packet_participances/?id=${item.id}" class="ml5">查看</a>
 				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id} target="_blank">预览</a>
 				    <a href="javascript:void(0);" class="ml5 xa-link-copy" data-clipboard-text="/m/apps/red_packet/m_red_packet/?webapp_owner_id=${item.owner_id}&id=${item.id}">复制链接</a>
 					{{if (item.status === '已结束')}}
@@ -237,7 +237,7 @@ $(document).ready(function() {
 			}
 		});
 	});
-	
+
 	$('body').delegate('.xa-close', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -258,7 +258,7 @@ $(document).ready(function() {
 			}
 		});
 	});
-	
+
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -285,7 +285,7 @@ $(document).ready(function() {
 			}
 		});
     });
-	
+
 	$('.xa-search').click(function(event) {
 		var name = $.trim($('[name="name"]').val());
 		var status = $.trim($('[name="status"]').val());
@@ -302,7 +302,7 @@ $(document).ready(function() {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
-	
+
 	$('.xa-reset').click(function(event) {
 		$('[name="name"]').val('');
 		$('[name="status"]').val('-1');
