--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -622,6 +622,7 @@
         if(is_self_page){
             //参与活动
             if(red_packet_status){
+                $('.wa-running').hide();
                 showSuccess();
             }
             if(!W.isMember){
