--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1439,8 +1439,8 @@ li.wui-selectBox-display-table {
     -webkit-border-radius: 100px;
     border-radius: 100px;
     float: left;
-    margin-top: 3px;
-    margin-left: 3px;
+    margin-top: 6px;
+    margin-left: 6px;
 }
 
 .wui-red_packet-container .wui-i-help_group .wui-i-shop_circle img{
@@ -1461,7 +1461,7 @@ li.wui-selectBox-display-table {
     color: #B30000;
     border: 1px solid #8E0000;
     border-radius: 15px;
-    margin-right: 2px;
+    margin-right: 4px;
 }
 
 .wui-red_packet-container .wui-i-userinfo_group{
@@ -1504,7 +1504,7 @@ li.wui-selectBox-display-table {
     font-size: smaller;
 }
 .wui-red_packet-container .wui-i-money_group .wui-i-money{
-    font-size: 1.7rem;
+    font-size: 2rem;
     margin-top: 5px;
 }
 
@@ -1636,10 +1636,10 @@ li.wui-selectBox-display-table {
 .wui-red_packet-container .wui-i-btngroup button{
     text-align: center;
     font-weight: bold;
-    /*font-size: 1.5rem;*/
+    font-size: 0.8rem;
     color:#CD0E06;
     background:#FFC600;
-    border: 0px;
+    border: 0;
     border-radius: 1px;
     width: 80%;
     height: 2.5rem;
@@ -1741,12 +1741,12 @@ li.wui-selectBox-display-table {
 .wui-red_packet-container .wui-i-rules-contentbox{
     background: no-repeat scroll 0 0 url("/termite_static/img/component/redpacket/rules.png");
     border-radius: 3px;
-    left: 15%;
+    left: 5%;
     padding: 10px 10px 16px 9px;
     position: fixed;
-    top: -5%;
-    width: 64%;
-    height: 85%;
+    top: -10%;
+    width: 85%;
+    height: 75%;
     z-index: 11111;
     text-align: center;
     background-position: -2px -9px;
@@ -1757,7 +1757,7 @@ li.wui-selectBox-display-table {
     margin-top: 20%;
 }
 .wui-red_packet-container .wui-i-rules-contentbox .wui-i-rules-content{
-    margin-top: 1rem;
+    margin-top: 2rem;
     color:#3D3C35;
     text-align: center;
 }
