--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -266,7 +266,7 @@ $(document).ready(function() {
         pull_request(member_ids);
     });
     //单发红包
-    $('.xa-pay').on('click', function(){
+    $('.xa-content').delegate('.xa-pay', 'click', function(){
         var $this = $(this);
         var member_id = $this.attr('data-memberId');
         pull_request([member_id]);
