--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -287,7 +287,7 @@ function pull_request(member_ids){
             table.reload();
         },
         error: function(error){
-            console.log('发放失败');
+            W.showHint('error', error.errMsg);
         }
     });
 }
