--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -283,7 +283,7 @@ function pull_request(member_ids){
             member_ids: member_ids.join(',')
         },
         success: function(resp){
-            W.showHint('info', "发放红包完成, 未发放成功的会员可能已经取消关注，请核实确认");
+            W.showHint("发放红包完成, 未发放成功的会员可能已经取消关注，请核实确认");
             table.reload();
         },
         error: function(error){
