--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -586,11 +586,11 @@
     var is_self_page = true;
     var red_packet_status = false;
     var page_owner_name = '';
-    var page_owner_icon = '';
+    var page_owner_icon = '';//用户头像
     var page_owner_member_id = '';
     var qrcode_url = W.qrcodeUrl;
     var new_qrcode_url = {% if params_qrcode_url %}'{{params_qrcode_url}}'{% else %}qrcode_url{% endif %};
-    var mp_user_head_img = '{{ mpUserHeadImg }}';
+    var mp_user_head_img = '{{ mpUserHeadImg }}'; //公众号头像
     $(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
