--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -12,16 +12,16 @@
             {% endif %}
         {% else %}yellow{% endif %}">
         <div class="wui-i-background-image">
-<!--             {% if component.model.background_image %}
+            <!--             {% if component.model.background_image %}
                 <img src="{{ component.model.background_image }}">
             {% else %} -->
                 <img src="/termite_static/img/component/redpacket/background.png">
-            <!-- {% endif %} -->
+                <!-- {% endif %} -->
         </div>
         <div class="wui-i-body">
             <div class="wui-i-help_group">
                 <div class="wui-i-shop_circle">
-                    <img src="">
+                    <img src="/static/img/default_shop_avatar.png">
                 </div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
@@ -38,7 +38,7 @@
                                 <p class="wui-i-title">活动规则</p>
                             </div>
                             <div class="wui-i-content-box xa-i-content-box">
-                                {{component.model.rules|safe}}
+                                {{ component.model.rules|safe }}
                             </div>
                         </div>
                     </div>
@@ -46,11 +46,11 @@
             </div>
             <div class="wui-i-userinfo_group">
                 <div class="wui-i-avatar_group">
-                    <div class = "wui-i-avatar_circle xa-i-avatar_circle" >
-                        <img style="border:0px" src="">
+                    <div class="wui-i-avatar_circle xa-i-avatar_circle">
+                        <img style="border:0px" src="/static/img/default_avatar.png">
                     </div>
                 </div>
-                <div class = "wui-i-money_group">
+                <div class="wui-i-money_group">
                     <div class="wui-i-text">
                         <p>总金额</p>
                     </div>
@@ -66,21 +66,30 @@
                     </div>
                 </div>
                 <div class="wui-i-bar">
-                 <div class="wui-i-bar_process xa-i-bar_process"></div>
+                    <div class="wui-i-bar_process xa-i-bar_process"></div>
                 </div>
                 <div class="wui-i-power_money wa-i-current_money">
                     <p>当前金额 0.00元</p>
                 </div>
             </div>
-            <div style="display: none" class="wui-i-start_time">{{component.model.start_time}}</div>
-            <div style="display: none" class="wui-i-end_time">{{component.model.end_time}}</div>
-            <div class="wui-i-timing wa-timing {% if component.model.timing.timing %}{% if not component.model.timing.timing.select %}hide{% endif %}{% endif %}">
+            <div style="display: none" class="wui-i-start_time">{{ component.model.start_time }}</div>
+            <div style="display: none" class="wui-i-end_time">{{ component.model.end_time }}</div>
+            <div class="wui-i-timing wa-timing
+                    {% if component.model.timing.timing %}{% if not component.model.timing.timing.select %}hide{% endif %}{% endif %}">
                 <div class="wui-i-timing wui-i-timer">
                     <i></i>:
-                    <b class="xa-day">{% if component.model.timing_value.day %}{{component.model.timing_value.day}}{% else %}99{% endif %}</b>:
-                    <b class="xa-hour">{% if component.model.timing_value.hour %}{{component.model.timing_value.hour}}{% else %}23{% endif %}</b>:
-                    <b class="xa-minute">{% if component.model.timing_value.minute %}{{component.model.timing_value.minute}}{% else %}59{% endif %}</b>:
-                    <b class="xa-second">{% if component.model.timing_value.second %}{{component.model.timing_value.second}}{% else %}59{% endif %}</b>
+                    <b class="xa-day">
+                        {% if component.model.timing_value.day %}{{ component.model.timing_value.day }}{% else %}
+                            99{% endif %}</b>:
+                    <b class="xa-hour">
+                        {% if component.model.timing_value.hour %}{{ component.model.timing_value.hour }}{% else %}
+                            23{% endif %}</b>:
+                    <b class="xa-minute">
+                        {% if component.model.timing_value.minute %}{{ component.model.timing_value.minute }}{% else %}
+                            59{% endif %}</b>:
+                    <b class="xa-second">
+                        {% if component.model.timing_value.second %}{{ component.model.timing_value.second }}{% else %}
+                            59{% endif %}</b>
                 </div>
                 <div class="wui-i-timer-text">
                     <b>天</b>&nbsp<b>时</b>&nbsp<b>分</b>&nbsp<b>秒</b>
@@ -90,33 +99,34 @@
                 <button class="wui-i-btn-running wa-running wui-hide">邀请好友 帮我拼红包</button>
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-power wa-power wui-hide"><b class="wa-power-btn-action">帮</b><b class="wa-mobile_solution">asdasda</b><b>点赞</b></button>
+                <button class="wui-i-btn-power wa-power wui-hide"><b class="wa-power-btn-action">帮</b><b
+                        class="wa-mobile_solution">asdasda</b><b>点赞</b></button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
             <!-- 成功消息 -->
             <div class="wui-i-system_msgbox wa-i-system_msgbox">
 
             </div>
-            <div class="wui-i-states">
+            <div class="wui-i-states none">
                 <div class="wui-i-title" style="text-align: center;color:white;font-weight:normal;">
                     <span class="wui-i-helper-title-content">
-                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;"/>
                         <b>已贡献好友</b>
-                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;"/>
                     </span>
                 </div>
                 <div class="xui-top100 wa-top100">
-                <!-- 测试格式 -->
-                   <!-- <div class="wui-i-friend">
-                        <div  class="wui-i-avatarbox">
-                            <div class="wui-i-avatar"></div>
-                        </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div> -->
-                <!-- 测试格式end -->
+                    <!-- 测试格式 -->
+                    <!-- <div class="wui-i-friend">
+                         <div  class="wui-i-avatarbox">
+                             <div class="wui-i-avatar"></div>
+                         </div>
+                         <div class="wui-i-info">
+                             <li class="wui-i-money">2.05元</li>
+                             <li class="wui-i-name">一起来笑</li>
+                         </div>
+                     </div> -->
+                    <!-- 测试格式end -->
                 </div>
             </div>
         </div>
