--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1589,6 +1589,7 @@ li.wui-selectBox-display-table {
 }
 .wui-red_packet-container .wui-i-timing .wui-i-timer b{
     margin-right: 5px;
+    width:24px;
     height: 100%;
     background: url("/termite_static/img/component/redpacket/icon_sprite.png") no-repeat;
     background-size: 520%;
