--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1589,16 +1589,17 @@ li.wui-selectBox-display-table {
 }
 .wui-red_packet-container .wui-i-timing .wui-i-timer b{
     margin-right: 5px;
-    width:24px;
+    width:15px;
     height: 100%;
     background: url("/termite_static/img/component/redpacket/icon_sprite.png") no-repeat;
-    background-size: 520%;
-    background-position: -94px -10px;
+    background-size: 540%;
+    background-position: -110px -13px;
     font-size: 0.7rem;
     padding: 7px 5px;
     color: white;
     border-radius: 2px;
     font-family: "Arial", "黑体";
+    display: inline-block;
 }
 .wui-red_packet-container .wui-i-timing i{
     background: url("/termite_static/img/component/redpacket/icon_sprite.png") no-repeat;
