--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -356,6 +356,15 @@
                 <div>
                     <p>该区间会影响到一个红包会被几个好友拼满。需根据总金额与红包个数设置适当的区间。</p>
                 </div>
+                <div>
+                    <p>小技巧：</p>
+                </div>
+                <div>
+                    <p>当红包类型为拼手气时，每个用户分配的红包都将趋于平局数（总金额/红包个数）,</p>
+                </div>
+                <div>
+                    <p>可以根据得出的数值来设置贡献金额区间。</p>
+                </div>
             </div>
 
             <div class="modal-footer modal-footerBg">
