--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -121,7 +121,7 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>活动名称</th>
+				<th style="word-wrap: break-word;word-break: break-all;white-space: pre-wrap;">活动名称</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
 				<th>红包类型</th>
@@ -137,7 +137,7 @@
 			<tr data-id="${item.id}">
 				<td
 					class="tl pl25"
-					style="width:250px; height:60px;"
+					style="width:250px; height:60px;word-wrap: break-word;word-break: break-all;"
 					title="${item.name}"
 				>
 				   <a
