--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -326,7 +326,7 @@ function pull_request(member_ids){
             member_ids: member_ids.join(',')
         },
         success: function(resp){
-            W.showHint('',"发放红包完成");
+            W.showHint('',"发放红包完成, 取消关注的会员不会发放红包, 请核查");
             table.reload();
         },
         error: function(error){
