--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -2,6 +2,9 @@
 
 {% block css %}
 <style>
+    .xui-attentionBox{
+        display: none;
+    }
     .wui-mask{
         position: absolute;
         top: 0;
