--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -196,6 +196,9 @@
         margin-left: auto;
         margin-right: auto;
     }
+    .xui-attentionBox{
+        display: none !important;
+    }
 
 /*竖屏幕*/
 
