--- a/weapp/templates/apps_base.html
+++ b/weapp/templates/apps_base.html
@@ -31,6 +31,26 @@
         <!-- *end_prunt_task* -->
 
         <style>
+            .xui-attentionBox{
+                display: none;
+                width: 233px;
+                height: 270px;
+                background: url(/static_v2/img/termite2/two-dimension.png);
+                background-size: 100%;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                margin-top: -135px;
+                margin-left: -115px;
+                z-index: 10000;
+            }
+            .xui-twoDimensionImg {
+                width: 148px;
+                height: 155px;
+                position: absolute;
+                top: 42px;
+                left: 42px;;
+            }
             .wui-apps-alert{
                 opacity: 0;
                 color: whitesmoke;
@@ -144,7 +164,7 @@
         </div>
         <div data-ui-role="swipemask" class="mask"></div>
 
-        <div class="xui-attentionBox "><img class="xui-twoDimensionImg" src=""/></div></div>
+        <div class="xui-attentionBox"><img class="xui-twoDimensionImg" src=""/></div></div>
 
         {% block content-panel %}{% endblock %}
 
