注定小字体

--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1638,7 +1638,7 @@ li.wui-selectBox-display-table {
 .wui-red_packet-container .wui-i-btngroup button{
     text-align: center;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 0.8rem;
     color:#CD0E06;
     background:#FFC600;
     border: 0;
